--- a/src/Diamante/AutomationBundle/Resources/config/automation.yml
+++ b/src/Diamante/AutomationBundle/Resources/config/automation.yml
@@ -44,15 +44,15 @@ diamante_automation:
       class: 'Diamante\AutomationBundle\Rule\Condition\Expression\Changed'
       frontend_label: diamante.automation.condition.changed
       type: 'bool'
-      rules: ['workflow']
+      rules: ['event_triggered']
     changed_from:
       class: 'Diamante\AutomationBundle\Rule\Condition\Expression\ChangedFrom'
       frontend_label: diamante.automation.condition.changed_from
-      rules: ['workflow']
+      rules: ['event_triggered']
     changed_to:
       class: 'Diamante\AutomationBundle\Rule\Condition\Expression\ChangedTo'
       frontend_label: diamante.automation.condition.changed_to
-      rules: ['workflow']
+      rules: ['event_triggered']
     'true':
       class: 'Diamante\AutomationBundle\Rule\Condition\Expression\TrueCondition'
       frontend_label: diamante.automation.condition.true
