fix not equal condition for assignee unassigned value

--- a/src/Diamante/AutomationBundle/Resources/config/conditions_mapper.yml
+++ b/src/Diamante/AutomationBundle/Resources/config/conditions_mapper.yml
@@ -22,10 +22,10 @@ diamante_automation:
         assignee:
           eq:
             service: diamante_automation.generic.condition_builder
-            method: getAssigneeCondition
+            method: getAssigneeEqCondition
           neq:
             service: diamante_automation.generic.condition_builder
-            method: getAssigneeCondition
+            method: getAssigneeNeqCondition
         reporter_email:
           like:
             service: diamante_automation.generic.condition_builder
