--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -16,7 +16,7 @@ _imagine:
 # ORO routes
 #
 oro_default:
-    pattern:  /
+    path:  /
     defaults:
         _controller: OroDashboardBundle:Dashboard:view
 
