--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -94,7 +94,7 @@ security:
             logout:
                 path:                       oro_user_security_logout
             organization-remember-me:
-                key:                        %secret%
+                key:                        "%secret%"
                 name:                       CRMRM
                 lifetime:                   1209600   # stay logged for two weeks
                 httponly:                   true
