--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -1,7 +1,10 @@
 imports:
-    - { resource: config_prod.yml }
+    - { resource: config.yml }
     - { resource: parameters_test.yml }
     - { resource: security_test.yml }
+
+parameters:
+    doctrine.dbal.connection_factory.class: 'Oro\Component\Testing\Doctrine\PersistentConnectionFactory'
 
 framework:
     test: ~
@@ -9,20 +12,45 @@ framework:
         storage_id: session.storage.mock_file
     csrf_protection: true
     profiler:
-        collect: false
+        enabled: false
 
-web_profiler:
-    toolbar: false
-    intercept_redirects: false
+monolog:
+    handlers:
+        fingers_crossed:
+            type: fingers_crossed
+            action_level: error
+            handler: nested
+        nested:
+            type: stream
+            path: "%kernel.logs_dir%/%kernel.environment%.log"
+            level: debug
 
 services:
-    twig.extension.debug:
-        class: Twig_Extensions_Extension_Debug
-        tags:
-            - { name: twig.extension }
+    oro_message_queue.test.message_collector:
+        class: Oro\Bundle\MessageQueueBundle\Test\Functional\MessageCollector
+        decorates: oro_message_queue.client.message_producer
+        arguments:
+            - '@oro_message_queue.test.message_collector.inner'
 
 swiftmailer:
     disable_delivery: true
 
 oro_require_js:
     js_engine: ~
+
+# configure loose default password requirements for auto-generated test users
+oro_user:
+    settings:
+        password_min_length:
+            value: 2
+        password_lower_case:
+            value: false
+        password_upper_case:
+            value: false
+        password_numbers:
+            value: false
+        password_special_chars:
+            value: false
+
+twig:
+    strict_variables: true
