--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,7 +34,7 @@ framework:
 twig:
     debug:                    "%kernel.debug%"
     strict_variables:         "%kernel.debug%"
-    exception_controller:     "FOS\\RestBundle\\Controller\\ExceptionController::showAction"
+    exception_controller:     "FOS\RestBundle\Controller\ExceptionController::showAction"
     globals:
         bap:
             layout:           ::base.html.twig  # default layout across all Oro bundles
@@ -48,51 +48,9 @@ assetic:
         lessphp:
             file: "%kernel.root_dir%/../vendor/leafo/lessphp/lessc.inc.php"
             apply_to: "\.less$"
+            paths: ["%kernel.root_dir%/../web/bundles"]
         cssmin:
             file: "%kernel.root_dir%/Resources/php/cssmin-v3.0.1.php"
-
-# Doctrine Configuration
-doctrine:
-    dbal:
-        default_connection:   default
-        connections:
-            default:
-                driver:       "%database_driver%"
-                host:         "%database_host%"
-                port:         "%database_port%"
-                dbname:       "%database_name%"
-                user:         "%database_user%"
-                password:     "%database_password%"
-                charset:      UTF8
-            report_source:
-                driver:       "%database_driver%"
-                host:         "%database_host%"
-                port:         "%database_port%"
-                dbname:       "%database_name%"
-                user:         "%database_user%"
-                password:     "%database_password%"
-                charset:      UTF8
-            report_target:
-                driver:       "%database_driver%"
-                host:         "%database_host%"
-                port:         "%database_port%"
-                dbname:       "%database_name%"
-                user:         "%database_user%"
-                password:     "%database_password%"
-                charset:      UTF8
-    orm:
-        auto_generate_proxy_classes: "%kernel.debug%"
-        auto_mapping:         true
-        class_metadata_factory_name: Oro\Bundle\EntityExtendBundle\Mapping\ExtendClassMetadataFactory
-        resolve_target_entities:
-            Symfony\Component\Security\Core\User\UserInterface: Oro\Bundle\UserBundle\Entity\User
-        mappings:
-            OroDistributionBundle:
-                mapping:   false
-                is_bundle: true
-        metadata_cache_driver:
-            type: service
-            id: doctrine.metadata.cache
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -125,18 +83,6 @@ fos_rest:
 fos_js_routing:
     routes_to_expose:         [oro_*]
 
-be_simple_soap:
-    cache:
-        type:                 disk
-        lifetime:             86400
-        limit:                5
-    services:
-        soap:
-            namespace:        urn:OroPlatform
-            binding:          rpc-literal
-            resource:         .
-            resource_type:    oro_soap
-
 stof_doctrine_extensions:
     default_locale: en
     translation_fallback: true
@@ -150,14 +96,9 @@ services:
          class:               Twig_Extensions_Extension_Intl
          tags:
              - { name: twig.extension }
-    doctrine.metadata.cache:
-        parent: oro.cache.abstract
-        calls:
-            - [ setNamespace, [ "doctrine.metadata.cache" ] ]
 
 escape_wsse_authentication:
     authentication_provider_class: Oro\Bundle\UserBundle\Security\WsseAuthProvider
-    authentication_listener_class: Oro\Bundle\UserBundle\Security\WsseAuthListener
 
 genemu_form:
     select2: ~
@@ -169,7 +110,7 @@ a2lix_translation_form:
 
 lexik_maintenance:
     authorized:
-        path:                 "maintenance|.*\\.js"             # "maintenance" is only for demo purposes, remove in production!
+        path:                 "maintenance|.*\.js"             # "maintenance" is only for demo purposes, remove in production!
 #        ips:                  ["127.0.0.1"]                   # Optional. Authorized ip addresses
     driver:
         class:                Lexik\Bundle\MaintenanceBundle\Drivers\FileDriver
@@ -202,3 +143,9 @@ oro_help:
 
 oro_theme:
     active_theme: oro
+
+oro_message_queue:
+    transport:
+        default: '%message_queue_transport%'
+        '%message_queue_transport%': '%message_queue_transport_config%'
+    client: ~
