--- a/app/config/parameters_test.yml.dist
+++ b/app/config/parameters_test.yml.dist
@@ -27,3 +27,6 @@ parameters:
     secret:                 ThisTokenIsNotSoSecretChangeIt
     installed:              ~
     assets_version:         ~
+    assets_version_strategy: time_hash
+    message_queue_transport: 'null'
+    message_queue_transport_config: {}
