--- a/src/Diamante/DeskBundle/Resources/config/requirejs.yml
+++ b/src/Diamante/DeskBundle/Resources/config/requirejs.yml
@@ -3,7 +3,7 @@ config:
         '*':
             'oro/datagrid/action/delete-action': 'diamante/datagrid/action/delete-action'
             'orodatagrid/js/app/plugins/grid/floating-header-plugin': 'diamantedesk/js/app/plugins/grid/floating-header-plugin'
-            'orodatagrid/js/app/components/datagrid-component': 'diamantedesk/js/app/components/datagrid-component'
+#            'orodatagrid/js/app/components/datagrid-component': 'diamantedesk/js/app/components/datagrid-component'
         'diamante/datagrid/action/delete-action': 'oro/datagrid/action/delete-action'
 
     paths:
