--- a/src/Diamante/EmailProcessingBundle/Resources/config/oro/system_configuration.yml
+++ b/src/Diamante/EmailProcessingBundle/Resources/config/oro/system_configuration.yml
@@ -1,4 +1,4 @@
-oro_system_configuration:
+system_configuration:
     groups:
         diamante_desk_channels_email_group:
             title: 'Email'
