Add new actions to whitelist

--- a/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
+++ b/src/Diamante/DistributionBundle/Resources/config/whitelist.yml
@@ -28,13 +28,12 @@ whitelist:
     - 'oro_importexport_export_instant'
     - 'oro_importexport_export_download'
     - 'oro_attachment_file'
-    - 'oro_user_reset_reset'
+    - 'oro_action_widget_buttons'
 
     #OroUserBundle
     - 'oro_activity_list_api_get_list'
     - 'oro_comment_form'
     - 'orocrm_task_user_tasks'
-    - 'oro_user_apigen'
 
     #Dashboard
     - 'oro_api_post_dashboard_widget_add_widget'
