--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ matrix:
     - php: 7.0
     - php: hhvm
 
+branches:
+  except:
+  - l10n_master
+
 before_install:
   - mysql -e 'create database diamantedesk;'
   - if [[ "$TRAVIS_PHP_VERSION"  = "hhvm" ]]; then cat travis.php.ini >> /etc/hhvm/php.ini ; fi
