--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,8 +1,105 @@
 security:
+    acl:
+        connection: default
+        cache:
+            id: security.acl.cache.doctrine
+            prefix: sf2_acl_
+
+    access_decision_manager:
+        strategy: unanimous
+
+    providers:
+        chain_provider:
+            chain:
+                providers:                  [in_memory, oro_user]
+        diamante_api_user:
+            id:                             diamante.api.user.security.provider
+        oro_user:
+            id:                             oro_user.security.provider
+        in_memory:
+            memory:
+                users:                      []
+
     encoders:
+        Oro\Bundle\UserBundle\Entity\User: sha512
+        Diamante\ApiBundle\Entity\ApiUser: sha1
         Symfony\Component\Security\Core\User\User: plaintext
 
     firewalls:
         dev:
-            pattern:  ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+            pattern:                        ^/(_(profiler|wdt)|css|images|js)/
+            security:                       false
+
+        install:
+            pattern:                        ^/installer
+            security:                       false
+            anonymous:                      true
+
+        wsse_secured:
+            pattern:                        ^/api/(rest|soap).*
+            wsse:
+                lifetime:                   3600
+                realm:                      "Secured API"
+                profile:                    "UsernameToken"
+            context:                        main
+
+        wsse_secured_diamante:
+            pattern:                        ^/api/diamante/(rest|soap).*
+            provider:                       diamante_api_user
+            stateless:                      true
+            wsse_diamante_api:              true
+
+        login:
+            pattern:                        ^/user/(login|reset-request|send-email|check-email)$
+            provider:                       chain_provider
+            anonymous:                      true
+
+        reset_password:
+            pattern:                        ^/user/reset/*
+            provider:                       chain_provider
+            anonymous:                      true
+
+        diamante_attachments_download:
+            pattern:        ^/desk/attachments/download/*
+            provider:       chain_provider
+            anonymous:      true
+
+        front_diamante:
+            pattern:        ^/portal
+            provider:       chain_provider
+            anonymous:      true
+
+        front_diamante_reset_password:
+            pattern:        ^/portal/password/*
+            provider:       chain_provider
+            anonymous:      true
+
+        embedded_form:
+            pattern:                        ^/embedded-form/(submit|success)
+            provider:                       chain_provider
+            anonymous:                      true
+
+        tracking_data:
+            pattern:                        ^/tracking/data/create
+            provider:                       chain_provider
+            anonymous:                      true
+
+        main:
+            pattern:                        ^/
+            provider:                       chain_provider
+            organization-form-login:
+                csrf_provider:              form.csrf_provider
+                check_path:                 oro_user_security_check
+                login_path:                 oro_user_security_login
+            logout:
+                path:                       oro_user_security_logout
+            organization-remember-me:
+                key:                        "%secret%"
+                name:                       CRMRM
+                lifetime:                   1209600   # stay logged for two weeks
+                httponly:                   true
+            anonymous:                      false
+
+    access_control:
+        - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/api/rest/(latest|v1)/pinbars, role: ROLE_USER }
