--- a/.gitignore
+++ b/.gitignore
@@ -7,19 +7,41 @@
 /build/logs/*
 /vendor
 /cov
-/web/bundles
-/web/css
-/web/js
-/web/uploads/users/*
-/web/uploads/branch/*
-/web/media/cache
-/web/build.js
-/app/cache/*
-/app/config/parameters.yml
-/app/config/parameters_test.yml
+behat.yml
+/var/*
+!var/cache/
+/var/cache/*
+!var/cache/.gitkeep
+!var/logs/
+/var/logs/*
+!var/logs/.gitkeep
+!var/attachment/
+/var/attachment/*
+!var/attachment/.gitkeep
+!var/attachments/
+/var/attachments/*
+!var/attachments/.gitkeep
+!var/import_export/
+/var/import_export/*
+!var/import_export/.gitkeep
+!var/oro-check.php
+!var/OroRequirements.php
+!var/DiamanteDeskRequirements.php
+/public/bundles
+/public/css
+/public/js
+/public/uploads/users/*
+/public/media/cache
+/public/media/js
+/public/build.js
+/config/parameters.yml
+/config/parameters_test.yml
 *~
-/app/logs/*
-/app/attachments/*
+bin/*
+!bin/console
+!bin/dist
 phpunit.xml
-.DS_Store
-bin
+/var/SymfonyRequirements.php
+/public/uploads/behat
+/.web-server-pid
+/.vagrant
